--- a/src/feature/user/components/InputField/InputField.scss
+++ b/src/feature/user/components/InputField/InputField.scss
@@ -29,4 +29,13 @@
 			border-color: $primary-color;
 		}
 	}
+	&-image {
+		display: block;
+		margin-top: 2rem;
+
+		max-width: 240px;
+		max-height: 240px;
+
+		border-radius: 10px;
+	}
 }
