--- a/src/feature/user/components/AsideBanner/AsideBanner.scss
+++ b/src/feature/user/components/AsideBanner/AsideBanner.scss
@@ -3,10 +3,12 @@
 	flex-direction: column;
 
 	height: 100vh;
+	min-height: 100%;
 	margin-left: -1.5rem;
 	margin-right: -1.5rem;
 	&__content {
-		padding: 8rem 4rem;
+		padding: 6rem 2rem;
+
 		& > .logo {
 			margin-bottom: 2rem;
 		}
@@ -27,6 +29,16 @@
 	@media screen and (max-width: 991px) {
 		& {
 			display: none;
+		}
+	}
+	@media screen and (max-width: 1199px) {
+		&__content > .logo {
+			margin-bottom: 1rem;
+		}
+
+		&__title {
+			font-size: 2.5rem;
+			font-weight: 700;
 		}
 	}
 }
