--- a/src/feature/user/pages/Login/Login.scss
+++ b/src/feature/user/pages/Login/Login.scss
@@ -4,11 +4,14 @@
 		justify-content: center;
 		flex-direction: column;
 
-		height: 100%;
+		min-height: 100vh;
 		max-width: 50%;
+
 		margin: 0 auto;
+		padding: 5rem 0;
 		& > .logo {
-			font-size: 3.2rem;
+			margin-bottom: 2rem;
+			font-size: 2rem;
 			display: none;
 		}
 	}
@@ -16,16 +19,12 @@
 		font-size: 3.2rem;
 		font-weight: 700;
 		margin-bottom: 2rem;
-		margin-top: 2rem;
 	}
 	@media screen and (max-width: 991px) {
 		&__inner {
-			height: 60vh;
 			max-width: 60%;
 			& > .logo {
 				display: block;
-				padding-top: 7rem;
-				font-size: 2rem;
 			}
 		}
 		&__heading {
